# Theia

./: .gitignore  Cargo.toml  readme.md
scripts/: push.sh
src/: args.rs  config.rs  gui.rs  main.rs
src/html/: default.html  gui.html
