[package]
name = "theia"
version = "0.1.0"
authors = ["Jeffrey McAteer <jeffrey.p.mcateer@gmail.com>"]
edition = "2018"


[dependencies]
vlc-rs = "0.3"
web-view = "0.5.4"
app_dirs = "1.2.1"

serde = { version = "1.0", features = ["derive"] }
toml = "0.5"

structopt = "0.3"
url = "2.1"
regex = "1.3"
